--- a/Project-Spaced-Repetition-Tracker/style.css
+++ b/Project-Spaced-Repetition-Tracker/style.css
@@ -27,7 +27,7 @@ button {
   cursor: pointer; 
   border-radius: 5px;
   width: auto; 
-  background-color: #4CAF50; 
+  background-color: #3920c9; 
   transition: background-color 0.3s ease;
 }
 
