--- a/Project-Spaced-Repetition-Tracker/style.css
+++ b/Project-Spaced-Repetition-Tracker/style.css
@@ -20,14 +20,14 @@ button {
    font-size: 16px;
 }
 #subTask {
-  border: none; 
-  color: #FFFFFF; 
-  padding: 12px 24px; 
-  font-size: 16px; 
-  cursor: pointer; 
+  border: none;
+  color: #FFFFFF;
+  padding: 12px 24px;
+  font-size: 16px;
+  cursor: pointer;
   border-radius: 5px;
-  width: auto; 
-  background-color: #3920c9; 
+  width: auto;
+  background-color: #c9206c;
   transition: background-color 0.3s ease;
 }
 
