chenged the button color test

--- a/Project-Spaced-Repetition-Tracker/style.css
+++ b/Project-Spaced-Repetition-Tracker/style.css
@@ -27,7 +27,7 @@ button {
   cursor: pointer;
   border-radius: 5px;
   width: auto;
-  background-color: #c9206c;
+  background-color: #20c972;
   transition: background-color 0.3s ease;
 }
 
